# text-to-sql-hse26

./: .env.example  .gitignore  LICENSE  README.md  baseline.md  pyproject.toml  results.md
app/: __init__.py  main.py  settings.py
app/config/: config.py  prompts.yaml  secrets.py
app/core/: db.py  embeddings.py  llm.py  logger.py  settings.py
app/data/: spider_v1.py
app/data/dataloaders/: bird_dataloader.py  spider_dataloader.py
app/data/downloaders/: bird_downloader.py
app/data/spider_v1/: dataloaders.py  downloader.py
app/evaluation/: __init__.py  bird_runner.py  metrics.py  runner.py  spider_runner.py
app/pipeline/: __init__.py  text_to_sql.py
app/schema_linker/: __init__.py  base.py  schema_linker.py  spider.py  sqlite.py
app/schema_linker/schema_linkers/: base.py  (+3 more)
app/sql_generator/: models.py  sql_generator.py
docs/: ARCHITECTURE.md
scripts/: compare_link_vs_vector.py  export_graph.py  populate_bird_chroma.py  populate_spider_chroma.py  run_bird_evaluation.py  run_evaluation.py
text_to_sql_agent/: __init__.py  config.py  main.py
text_to_sql_agent/agents/: __init__.py  decomposer.py  execution_filter.py  generator.py  judge.py  refiner.py  selector.py
text_to_sql_agent/evaluation/: __init__.py  metrics.py  run_bird.py  run_spider.py  run_spider_v2.py
text_to_sql_agent/graph/: __init__.py  pipeline.py  state.py
text_to_sql_agent/prompts/: __init__.py  decomposer.py  generator.py  judge.py  refiner.py  selector.py
text_to_sql_agent/tools/: __init__.py  few_shot.py  llm_router.py  schema_loader.py  sql_executor.py  vector_store.py
(+1 files in other folders)
