[project]
name = "text-to-sql-hse26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.0",
    "click>=8.3.1",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "kagglehub>=0.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "openrouter>=0.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redisvl>=0.14.0",
]
